String literals instead of char *, system check
Before this, when ever a string literal was needed and the value could
be represented by a char * variable, the latter was used. To make sure
thereq might be no potential problem, all such cases were changed to a
"%s" and the name of the variable. It appears this could have been a
security problem.

Also all the calls to the `system` function where checked to see if it
really returned zero, if not the program will abort and report it.

In the manual two of the long sections in Introduction where moved to
the developing part.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2015-02-20  Mohammad Akhlaghi  <makhlaghi@gmail.com>
+
+	* doc/gnuastro.texi: Removed list of programs at first, added a
+	programs index. Added an examples chapter along with some one line
+	examples of each program. Moved the Why C and design philosophy
+	subsections to the Developing chapters.
+
+	* src: All 'error' functions are now called with a string literal
+	and not a string variable. Also all 'system' function calls now
+	check the return value.
+
+	* lib: Similar to above.
+
+	* include: similar to above.
+
 2015-02-18  Mohammad Akhlaghi  <makhlaghi@gmail.com>
 
 	* lib/Makefile.am: Changed all static libraries to libtool static
