--- a/THANKS
+++ b/THANKS
@@ -7,4 +7,5 @@ Alan Lefor                           alefor@astr.tohoku.ac.jp
 Brandon Invergo                      brandon@gnu.org
 Karl Berry                           karl@gnu.org
 Mohammad-Reza Khellat                moha.khe@gmail.com
+Richard Stallman                     rms@gnu.org
 Takashi Ichikawa                     ichikawa@astr.tohoku.ac.jp
